fix: コメントAPIをdplayer互換の形式に変更
