# server/src/player/dto/dplayer-comment-list.dto.ts
@@ -1,0 +1,11 @@
+import { DPlayerCommentDto } from './dplayer-comment.dto';
+
+/**
+ * DPlayer 互換コメント一覧レスポンス DTO
+ */
+export class DPlayerCommentListDto {
+  /**
+   * DPlayer 互換コメント配列
+   */
+  comments!: DPlayerCommentDto[];
+}
